# sgrep

./: Cargo.toml  LICENSE  Makefile  README.md
sgrep-collector/: Cargo.toml
sgrep-collector/src/: collectors.rs  docx.rs  lib.rs  pdf.rs  sheet.rs  utf8.rs
sgrep-collector/src/collectors/: utf8.rs
src/: engine.rs  grep.rs  highlight.rs  index.rs  main.rs  registry.rs  search.rs
src/engine/: stopwords.rs  tokenizer.rs
