[package]
name = "sgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["sgrep-collector"]

[dependencies]
sgrep-collector = { version = "0.1", path = "./sgrep-collector" }

tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tantivy = "0.16"
anyhow = "1.0"
glob = "0.3"
rayon = "1.5"
md5 = "0.6"
