[package]
authors = ["hexilee <i@hexilee.me>"]
edition = "2021"
name = "sgrep"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["sgrep-collector"]

[dependencies]
sgrep-collector = {version = "0.1", path = "./sgrep-collector"}

anyhow = "1.0"
cang-jie = "0.13"
clap = {version = "3.0", features = ["derive"]}
colored = "2.0"
dirs = "4.0"
glob = "0.3"
jieba-rs = "0.6"
md5 = "0.6"
rayon = "1.5"
regex = {version = "1.5", features = ["pattern"]}
tantivy = "0.16"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
